fixed contact info flex wrap

--- a/styles/main.css
+++ b/styles/main.css
@@ -749,6 +749,7 @@ footer {
     }
     .contact-info{
         display: flex;
+        flex-wrap: wrap;
         .info-card{
             font-size: 14px;
             padding: 0px 15px;
